packages/svelte/tests/validator/samples/class-state-constructor-9/_config.js
import { test } from '../../test';

export default test({
	skip: true // TODO delete this file so the test runs
});
